--- a/index.html
+++ b/index.html
@@ -20,5 +20,69 @@
         <button onclick="setMood()">set Mood</button>
     </div>
 </body>
-<script src="./contracts/mood.sol"></script>
+<script src="https://cdn.ethers.io/scripts/ethers-v4.min.js" type="text/javascript"></script>
+<script>
+    window.ethereum.enable();
+    
+    var provider = new ethers.providers.Web3Provider(
+        web3.currentProvider,
+        "ropsten"
+    );
+
+    var MoodContractAddress = "0x01b4b603a24931d77974C07257FA8041441A7596"
+    var MoodContractABI = [
+	{
+		"constant": true,
+		"inputs": [],
+		"name": "getMood",
+		"outputs": [
+			{
+				"internalType": "string",
+				"name": "",
+				"type": "string"
+			}
+		],
+		"payable": false,
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"constant": false,
+		"inputs": [
+			{
+				"internalType": "string",
+				"name": "_mood",
+				"type": "string"
+			}
+		],
+		"name": "setMood",
+		"outputs": [],
+		"payable": false,
+		"stateMutability": "nonpayable",
+		"type": "function"
+	}
+]
+
+    provider.listAccounts.then(function(acctouns) {
+        signer = provider.getSigner(accounts[0]);
+        MoodContract = new ethers.Contract(MoodContractAddress, MoodContractABI, signer)
+    })
+
+    async function getMood() {
+        getMoodPromise = MoodContract.getMood();
+        var Mood = await getMoodPromise;
+        alert("The current mood is: " + Mood);
+    }
+
+    async function setMood() {
+        mood = $("#mood").val()
+        if (mood = "") {
+            alert("Please input mood");
+        } else {
+            setMoodPromise = MoodContract.setMood(mood);
+            await setMoodPromise;
+        }
+    }
+</script>
+<script charset="utf-8" src="./contracts/mood.sol"></script>
 </html>
